spacing fix(?)

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -289,7 +289,7 @@ header .intro-text .intro-lead-in {
 }
 
 header .intro-text .intro-lead-in2 {
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 22px;
     line-height: 22px;
@@ -324,14 +324,14 @@ header .intro-text .intro-heading {
         line-height: 40px;
     }
     header .intro-text .intro-lead-in2 {
-        margin-bottom: 10px;
+        margin-bottom: 25px;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 30px;
         line-height: 40px;
     }
 
     header .intro-text .intro-heading {
-        margin-bottom: 50px;
+        margin-bottom: 25px; /*50px;*/
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 50px;
